# Synek-co-godo-prawda-ale-odyn-go-nie-s-ucho-

./: .env.example  .gitignore  Contekst.md  README.md  advanced-features.md  agents.md  antigravity_tasks.md  api-spec.md  architecture.md  best-practices.md  config-example.yaml  docker-compose.yml  env.example  future-features-spec.md  pyproject.toml  roadmap.md  todo.md  truthseeker_prompts.md
.agent/skills/truthseeker-add-agent/: SKILL.md
.agent/skills/truthseeker-debug/: SKILL.md
.agent/skills/truthseeker-health/: SKILL.md
.agent/skills/truthseeker-improve-prompt/: SKILL.md
.agent/skills/truthseeker-run-audit/: SKILL.md
.agent/skills/truthseeker-setup/: SKILL.md
.agent/skills/truthseeker-test-agent/: SKILL.md
.agent/workflows/: audit.md  debug.md  setup.md
src/: __init__.py
src/agents/: __init__.py  base.py
src/agents/chat_interrogator/: __init__.py  agent.py
src/agents/judge_dredd/: __init__.py  agent.py
src/agents/knowledge_architect/: __init__.py  agent.py
src/agents/orchestrator/: __init__.py  agent.py
src/agents/prompt_refiner/: __init__.py  agent.py
src/agents/scraper_intel/: __init__.py  agent.py
src/agents/verification/: __init__.py  agent.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  audit.py  health.py
src/core/: __init__.py  config.py  logging.py  models.py
src/infrastructure/: __init__.py  llm_client.py  qdrant_client.py
tests/: __init__.py  conftest.py
tests/agents/: test_verification.py
